--- a/xui/build.gradle
+++ b/xui/build.gradle
@@ -85,18 +85,18 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:$fragment_ktx_version"
     implementation "androidx.core:core-ktx:$android_core_ktx"
     implementation "com.google.android.material:material:$material_version"
-    implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta4"
+    implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
     // Navigation components
-    implementation "androidx.navigation:navigation-fragment-ktx:2.3.0-alpha03"
-    implementation "androidx.navigation:navigation-ui-ktx:2.3.0-alpha03"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
     implementation "androidx.paging:paging-runtime-ktx:2.1.1"
 
     implementation 'com.evrencoskun.library:tableview:0.8.8'
-    implementation 'com.xently.dialog:dialog:1.0.6'
     implementation 'org.greenrobot:eventbus:3.2.0'
+    implementation project(path: ':dialog')
 
     sharedGroup dependencies
 }
