--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation "com.google.android.material:material:$material_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
     implementation project(path: ':dialog')
-    implementation project(path: ':xui')
+    implementation project(path: ':core')
 
     sharedGroup dependencies
 }
