--- a/build.gradle
+++ b/build.gradle
@@ -65,21 +65,20 @@ ext.sharedGroup = { dependencyHandler ->
     testImplementation "org.hamcrest:hamcrest-all:$hamcrest_version"
     testImplementation "androidx.arch.core:core-testing:$arch_testing_version"
     testImplementation "org.robolectric:robolectric:$robolectric_version"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines"
+//    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines"
 
     // Dependencies for Android instrumented unit tests
     androidTestImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation "junit:junit:$junit_version"
     androidTestImplementation "org.mockito:mockito-core:$mockito_version"
     androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:$dex_marker_version"
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines"
+//    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines"
 
     // Testing code should not be included in the main code.
     // Once https://issuetracker.google.com/128612536 is fixed this can be fixed.
     debugImplementation("androidx.fragment:fragment-testing:$fragment_version") {
         exclude group: 'androidx.test', module: 'core'
     }
-//    implementation "androidx.test:core:$androidx_test_core_version"
 
 // AndroidX Test - JVM testing
     testImplementation "androidx.test:core-ktx:$androidx_test_core_version"
