--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         material_version = '1.2.0-alpha05'
         joda_version = '2.10.3'
         appcompat_version = '1.1.0'
-        android_core_ktx= '1.2.0'
+        android_core_ktx = '1.2.0'
         constraint_layout_version = '2.0.0-beta4'
         navigation_version = '2.3.0-alpha03'
         // Test Dependencies
@@ -23,6 +23,27 @@ buildscript {
         robolectric_version = '4.3.1'
         // Test Dependencies Kotlin
         coroutines = '1.3.4'
+        // Bintray
+        bintray_repo = 'XentlyUI' // Name of the Bintray repo you created
+        // Forms 1st part(separated by colon(:)) of implementation line of gradle
+        published_group_id = 'com.xently.xui'
+        // Forms 3rd part(separated by colon(:)) of implementation line of gradle
+        library_version = '1.0.4'
+        library_version_code = 5
+        library_site_url = 'https://github.com/ajharry69/Xently-UI'
+        library_git_url = 'https://github.com/ajharry69/Xently-UI.git'
+        library_developer_id = 'mitchthealien'
+        library_developer_name = 'Mitch'
+        library_developer_email = 'mitchthealien90@gmail.com'
+        library_license_name = 'The Apache Software License, Version 2.0'
+        library_license_url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
+        bintray_username = properties.getProperty('BINTRAY_USERNAME')
+        bintray_user_org = properties.getProperty('BINTRAY_ORG')
+        bintray_api_key = properties.getProperty('BINTRAY_API_KEY')
     }
     repositories {
         google()
@@ -36,6 +57,7 @@ buildscript {
         // JCenter/Bintray paths
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -45,7 +67,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-
     }
 }
 
