--- a/build.gradle
+++ b/build.gradle
@@ -8,14 +8,14 @@ buildscript {
         appcompat_version = '1.1.0'
         android_core_ktx = '1.2.0'
         constraint_layout_version = '2.0.0-beta4'
-        navigation_version = '2.3.0-alpha03'
+        navigation_version = '2.3.0-alpha04'
         // Test Dependencies
         androidx_test_core_version = '1.2.0'
         android_junit_version = '1.1.1'
         arch_testing_version = '2.1.0'
         dex_marker_version = '2.12.1'
-        espresso_version = '3.3.0-alpha02'
-        fragment_version = '1.2.2'
+        espresso_version = '3.3.0-alpha05'
+        fragment_version = '1.2.3'
         fragment_ktx_version = fragment_version
         hamcrest_version = '1.3'
         junit_version = '4.13'
@@ -28,8 +28,8 @@ buildscript {
         // Forms 1st part(separated by colon(:)) of implementation line of gradle
         published_group_id = 'com.xently.xui'
         // Forms 3rd part(separated by colon(:)) of implementation line of gradle
-        library_version = '1.0.8'
-        library_version_code = 9
+        library_version = '1.0.9'
+        library_version_code = 10
         library_site_url = 'https://github.com/ajharry69/Xently-UI'
         library_git_url = 'https://github.com/ajharry69/Xently-UI.git'
         library_developer_id = 'mitchthealien'
@@ -105,6 +105,7 @@ ext.sharedGroup = { dependencyHandler ->
     testImplementation "androidx.test.ext:junit:$android_junit_version"
 
 // AndroidX Test - Instrumented testing
+    androidTestImplementation "androidx.test.espresso:espresso-accessibility:$espresso_version"
     androidTestImplementation "androidx.test.ext:junit:$android_junit_version"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso_version"
