--- a/core/build.gradle
+++ b/core/build.gradle
@@ -77,6 +77,9 @@ android {
     viewBinding {
         enabled = true
     }
+    lintOptions {
+        resourcePrefix 'xui_'
+    }
     useLibrary 'android.test.runner'
     useLibrary 'android.test.base'
     useLibrary 'android.test.mock'
