--- a/dialog/build.gradle
+++ b/dialog/build.gradle
@@ -64,7 +64,9 @@ android {
     viewBinding {
         enabled = true
     }
-
+    lintOptions {
+        resourcePrefix 'xui_dialog_'
+    }
     useLibrary 'android.test.runner'
     useLibrary 'android.test.base'
     useLibrary 'android.test.mock'
