--- a/build.gradle
+++ b/build.gradle
@@ -3,19 +3,19 @@
 buildscript {
     ext {
         kotlin_version = '1.3.72'
-        material_version = '1.2.0-alpha06'
+        material_version = '1.3.0-alpha01'
         joda_version = '2.10.3'
         appcompat_version = '1.1.0'
-        android_core_ktx = '1.2.0'
-        constraint_layout_version = '2.0.0-beta4'
-        navigation_version = '2.3.0-alpha05'
+        android_core_ktx = '1.3.0'
+        constraint_layout_version = '2.0.0-beta7'
+        navigation_version = '2.3.0'
         // Test Dependencies
         androidx_test_core_version = '1.2.0'
         android_junit_version = '1.1.1'
         arch_testing_version = '2.1.0'
         dex_marker_version = '2.12.1'
         espresso_version = '3.3.0-alpha05'
-        fragment_version = '1.2.4'
+        fragment_version = '1.2.5'
         fragment_ktx_version = fragment_version
         hamcrest_version = '1.3'
         junit_version = '4.13'
@@ -28,8 +28,8 @@ buildscript {
         // Forms 1st part(separated by colon(:)) of implementation line of gradle
         published_group_id = 'com.xently.xui'
         // Forms 3rd part(separated by colon(:)) of implementation line of gradle
-        library_version = '1.1.4'
-        library_version_code = 15
+        library_version = '1.1.5'
+        library_version_code = 16
         library_site_url = 'https://github.com/ajharry69/Xently-UI'
         library_git_url = 'https://github.com/ajharry69/Xently-UI.git'
         library_developer_id = 'mitchthealien'
@@ -50,7 +50,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // JCenter/Bintray paths
