--- a/dialog/build.gradle
+++ b/dialog/build.gradle
@@ -41,8 +41,8 @@ ext {
 }
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    compileSdkVersion 30
+    buildToolsVersion '30.0.0'
 
     defaultConfig {
         minSdkVersion 15
